--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include setup.py
 include requirements.txt
-recursive-include src *.py
+recursive-include src *.py *.json *.md
+recursive-include test *.py *.feature
