Fixed a boatload of inspections: mostly typo/disambiguation

--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,8 @@
 envlist = py27
 
 [testenv]
-deps =
-  jsonschema
-  lettuce
-  packaging
-  python-Levenshtein
-  selenium
+deps =.[fast]
+
 commands =
   fattoush -c test/chrome_local.json test
   fattoush -c test/chrome_local_legacy.json test
